--- a/api/abuhamza-api/abuhamza.business/abuhamza.business.csproj
+++ b/api/abuhamza-api/abuhamza.business/abuhamza.business.csproj
@@ -65,8 +65,10 @@
     <Compile Include="Interface\ISupplierBusiness.cs" />
     <Compile Include="Interface\ITransactionBusiness.cs" />
     <Compile Include="Interface\IUserBusiness.cs" />
+    <Compile Include="Interface\IVoucherBusiness.cs" />
     <Compile Include="InvoiceBusiness.cs" />
     <Compile Include="MainCategoryBusiness.cs" />
+    <Compile Include="modmain.cs" />
     <Compile Include="ProductBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrderBusiness.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="SupplierBusiness.cs" />
     <Compile Include="TransactionBusiness.cs" />
     <Compile Include="UserBusiness.cs" />
+    <Compile Include="VoucherBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\abuhamza.domain\abuhamza.domain.csproj">
