--- a/api/abuhamza-api/abuhamza.repository/App.Config
+++ b/api/abuhamza-api/abuhamza.repository/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="abuhamzapetstoreEntities" connectionString="metadata=res://*/AbuHamzaEntities.csdl|res://*/AbuHamzaEntities.ssdl|res://*/AbuHamzaEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TCM883N\SQLEXPRESS;initial catalog=abuhamzapetstore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="abuhamzapetstoreEntities" connectionString="metadata=res://*/AbuHamzaEntities.csdl|res://*/AbuHamzaEntities.ssdl|res://*/AbuHamzaEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-P44VT9L\SQLEXPRESS;initial catalog=abuhamzapetstore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
