--- a/api/abuhamza-api/abuhamza.repository/abuhamza.repository.csproj
+++ b/api/abuhamza-api/abuhamza.repository/abuhamza.repository.csproj
@@ -86,14 +86,14 @@
     <Compile Include="sp_helpdiagrams_Result.cs">
       <DependentUpon>AbuHamzaEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="stpGetAllPendingVouchers_Result.cs">
+      <DependentUpon>AbuHamzaEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="stpGetPendingVouchersBySupplierID_Result.cs">
       <DependentUpon>AbuHamzaEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="SubCategoryRepository.cs" />
     <Compile Include="SupplierRepository.cs" />
-    <Compile Include="sysdiagram.cs">
-      <DependentUpon>AbuHamzaEntities.tt</DependentUpon>
-    </Compile>
     <Compile Include="tblAccount.cs">
       <DependentUpon>AbuHamzaEntities.tt</DependentUpon>
     </Compile>
@@ -169,7 +169,9 @@
     <None Include="AbuHamzaEntities.edmx.diagram">
       <DependentUpon>AbuHamzaEntities.edmx</DependentUpon>
     </None>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
