--- a/api/abuhamza.api/abuhamza-api/Web.config
+++ b/api/abuhamza.api/abuhamza-api/Web.config
@@ -71,7 +71,7 @@
   </system.codedom>
   <connectionStrings>
     <!--<add name="AbuHamzaEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=abuhamzapetstore;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="abuhamzapetstoreEntities" connectionString="metadata=res://*/AbuHamzaEntities.csdl|res://*/AbuHamzaEntities.ssdl|res://*/AbuHamzaEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=207.246.92.23;initial catalog=abuhamzapetstore;user id=abuhamza;password=$Default123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="abuhamzapetstoreEntities" connectionString="metadata=res://*/AbuHamzaEntities.csdl|res://*/AbuHamzaEntities.ssdl|res://*/AbuHamzaEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TCM883N\SQLEXPRESS;initial catalog=abuhamzapetstore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
