--- a/api/abuhamza.api/abuhamza-api/abuhamza-api.csproj
+++ b/api/abuhamza.api/abuhamza-api/abuhamza-api.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Controllers\MainCategoriesController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.cs" />
+    <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\SalariesController.cs" />
     <Compile Include="Controllers\SubCategoriesController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
