--- a/api/abuhamza.api/abuhamza.business/abuhamza.business.csproj
+++ b/api/abuhamza.api/abuhamza.business/abuhamza.business.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Interface\IMainCategoryBusiness.cs" />
     <Compile Include="Interface\IProductBusiness.cs" />
     <Compile Include="Interface\IPurchaseOrderBusiness.cs" />
+    <Compile Include="Interface\IReportBusiness.cs" />
     <Compile Include="Interface\ISalaryBusiness.cs" />
     <Compile Include="Interface\ISubCategoryBusiness.cs" />
     <Compile Include="Interface\ISupplierBusiness.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="ProductBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrderBusiness.cs" />
+    <Compile Include="ReportBusiness.cs" />
     <Compile Include="SalaryBusiness.cs" />
     <Compile Include="SubCategoryBusiness.cs" />
     <Compile Include="SupplierBusiness.cs" />
